--- a/style.css
+++ b/style.css
@@ -156,6 +156,8 @@ margin-top: -1px;
     margin-top: 50px;
 
 }
+#box a{
+text-decoration: none;}
 #box1{
     border-radius: 5px;
     background-color: rgb(252, 250, 250);
@@ -164,7 +166,7 @@ margin-top: -1px;
     width: fit-content;
     color: rgb(46, 46, 46);
     margin-right: 30px;
-    text-decoration: none;
+    
 }
 
 #box2{
@@ -175,8 +177,7 @@ margin-top: -1px;
     padding: 8px;
     height: fit-content;
     width: fit-content; 
-  text-decoration: none;
-}
+ 
 
 #box3{
     border-radius: 5px;
@@ -186,7 +187,7 @@ margin-top: -1px;
     width: fit-content;
     color: rgb(46, 46, 46);
     margin-right: 30px;
-  text-decoration: none;
+  
   
 }
 #box4{
@@ -197,7 +198,7 @@ margin-top: -1px;
     width: fit-content;
     color: rgb(46, 46, 46);
     margin-right: 30px;
-      text-decoration: none;
+      
 }
 #box1:hover{
     border-radius: 5px;
