--- a/style.css
+++ b/style.css
@@ -156,7 +156,13 @@ margin-top: -1px;
     margin-top: 50px;
 
 }
-#box:a{
+#box1:a{
+text-decoration: none;}
+#box2:a{
+text-decoration: none;}
+#box2:a{
+text-decoration: none;}
+#box2:a{
 text-decoration: none;}
 #box1{
     border-radius: 5px;
