--- a/style.css
+++ b/style.css
@@ -147,9 +147,7 @@ margin-top: -1px;
     color: rgb(46, 46, 46);
     margin-right: 10px;
 }
-a{
-text-decoration:none;
-}
+
 #loc:hover,#mail:hover{
     color: rgb(98, 216, 210);
     margin-right: 10px;
@@ -158,7 +156,9 @@ text-decoration:none;
     margin-top: 50px;
 
 }
-
+#box:a{
+text-decoration:none;
+}
 #box1{
     border-radius: 5px;
     background-color: rgb(252, 250, 250);
