--- a/style.css
+++ b/style.css
@@ -156,9 +156,10 @@ margin-top: -1px;
     margin-top: 50px;
 
 }
+/*
 #icon{
 text-decoration:none;
-}
+}*/
 #box1{
     border-radius: 5px;
     background-color: rgb(252, 250, 250);
