--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@ margin-left: inherit;
     box-sizing: border-box;
 }
 
-
+#icon{
+text-decoration:none;
+}
 #container{
     background-color: rgb(255, 255, 255);
     width: 100%;
