--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 html,body{
   /*  background-color: rgb(235, 190, 131);*/
     
@@ -242,7 +241,7 @@ margin-top: -1px;
     color: rgb(141, 219, 206);
     margin-right: 30px;
     transition: 0.5s;
-}
+}/*
 #wrap{
     
     height: 16rem;
@@ -257,7 +256,7 @@ border-radius: 100%;
 width: 20%;
 height: 20%;
 background: rgb(211, 65, 65);
-}
+}*/
 #image{
     height: 14rem;
     width: 14rem;
