--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
 
 html,body{
   /*  background-color: rgb(235, 190, 131);*/
-    
+
     margin: 0;
     padding: 20px;
 margin-left: inherit;
-    
+
 }
 *{
     box-sizing: border-box;
 }
 
-#icon{
-text-decoration:none;
-}
+
 #container{
     background-color: rgb(255, 255, 255);
     width: 100%;
@@ -22,8 +20,8 @@ text-decoration:none;
     display: flex;
     flex-direction: column;
     height: 100vh;
-  
-    
+
+
 }
 #navi{
 flex:100%;
@@ -40,7 +38,7 @@ padding: 10px;
         flex-direction: column;
         align-content:center ;
     }
-  
+
 }
 
 @media screen and (max-width: 900px){
@@ -48,10 +46,10 @@ padding: 10px;
         flex-direction: column;
         align-content:center ;
     }
-  
+
 }
 .nav{
-    
+
     color: rgb(92, 92, 92);
 margin: 10px;
     text-decoration: none;
@@ -61,7 +59,7 @@ margin: 10px;
 /* font-family: serif;*/
 }
 #navi a:hover,a:active{
-    
+
     padding-bottom: 5px;
     border-bottom: 1px solid rgb(146, 146, 144);
     transition: 0.5s;
@@ -83,12 +81,12 @@ margin: 10px;
     .home{
         flex-direction: column;
         justify-content: space-evenly;
-        
+
     }
-   
+
 }
 #color{
-    
+
     background-color: rgb(79, 209, 192);
     padding: 8px 25px;
     font-size: 10px;
@@ -129,7 +127,7 @@ margin-top: -40px;
     color: rgb(129, 128, 128);
 margin-top: -1px;
 font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-   
+
 }
 #mail{
     color: rgb(56, 56, 56);
@@ -137,7 +135,7 @@ font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans
 }
 #adds{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-   
+
     font-size: 16px;
     letter-spacing: -1px;
     font-weight: 100;
@@ -157,7 +155,6 @@ margin-top: -1px;
     margin-top: 50px;
 
 }
-
 #box1{
     border-radius: 5px;
     background-color: rgb(252, 250, 250);
@@ -166,7 +163,7 @@ margin-top: -1px;
     width: fit-content;
     color: rgb(46, 46, 46);
     margin-right: 30px;
-    
+
 }
 
 #box2{
@@ -177,7 +174,7 @@ margin-top: -1px;
     padding: 8px;
     height: fit-content;
     width: fit-content; 
- 
+}
 
 #box3{
     border-radius: 5px;
@@ -187,8 +184,7 @@ margin-top: -1px;
     width: fit-content;
     color: rgb(46, 46, 46);
     margin-right: 30px;
-  
-  
+
 }
 #box4{
     border-radius: 5px;
@@ -198,7 +194,7 @@ margin-top: -1px;
     width: fit-content;
     color: rgb(46, 46, 46);
     margin-right: 30px;
-      
+
 }
 #box1:hover{
     border-radius: 5px;
@@ -241,10 +237,10 @@ margin-top: -1px;
     color: rgb(141, 219, 206);
     margin-right: 30px;
     transition: 0.5s;
-}
+}/*
 #wrap{
     
-    height: 16rem;
+   /* height: 16rem;
     width: 16rem;
     border-width: 3%;
     border-radius: 100%;
@@ -256,7 +252,7 @@ border-radius: 100%;
 width: 20%;
 height: 20%;
 background: rgb(211, 65, 65);
-}
+}*/
 #image{
     height: 14rem;
     width: 14rem;
@@ -309,7 +305,7 @@ margin-bottom: 200px;}
 }
 #skill>a{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-   
+
     margin: 8px;
    /* border:1px chocolate;*/
     padding: 5px;
@@ -321,7 +317,7 @@ margin-bottom: 200px;}
 }
 #res{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-   
+
     margin-top:50px;
     /* border:1px chocolate;*/
      padding: 10px;
@@ -332,10 +328,10 @@ margin-bottom: 200px;}
      font-weight: 400;
      border-radius: 10px;
      text-decoration: none;
-     
+
 }
 #down{
-    
+
     color: rgb(255, 255, 255);
     margin-left: 10px;
 }
@@ -366,7 +362,7 @@ min-width:200px;
     justify-content: space-between;
     flex-direction: row;
     margin-bottom: 5px;
-    
+
 }
 #ab{
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -393,19 +389,19 @@ margin-bottom: 30px;
 #skil{
     display: flex;
     flex-wrap: wrap;
-    
+
     justify-content: space-evenly;
     flex-direction: row;
     margin-bottom: 5px;
-  
+
 }
 #techi{
     background-color: rgb(255, 255, 255);
-    
+
 }
 #pro{
     background-color: rgb(255, 255, 255);
-    
+
 }
 
 
@@ -419,18 +415,18 @@ margin-bottom: 30px;
     margin-top: 200px;   
  text-align: center;
  margin-bottom: 30px; 
-    
+
 
 }
 #inschool{
-   
+
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 18px;
     letter-spacing: -1px;
     color: rgb(75, 75, 75);
     font-weight: bolder;
  margin-bottom: 10px; 
-    
+
 
 
 }
@@ -459,7 +455,7 @@ margin-top: -20px;
     justify-content: space-evenly;
     flex-direction: row;
     margin-bottom: 200px;
-    
+
 
 }
 #wraper img{
@@ -476,7 +472,7 @@ margin-top: -20px;
     margin-left: 45%;
 }
 #exp{
-    
+
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 30px;
     letter-spacing: -1px;
@@ -508,4 +504,4 @@ margin: 5px;
 text-align: center;
     background-color: rgb(255, 255, 255);
     min-width: 300px;
-}
+} 
