--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ margin-left: inherit;
 .topnav {
   overflow: hidden;
   background-color: #333;
+ color: rgb(92, 92, 92);
+margin: 10px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .topnav a {
