--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html,body{
   /*  background-color: rgb(235, 190, 131);*/
 
     margin: 0;
-    padding: 20px;
+   /* padding: 20px;*/
 margin-left: inherit;
 
 }
