--- a/style.css
+++ b/style.css
@@ -24,10 +24,19 @@ margin-left: inherit;
 
 }
 #navi{
+  background-color:red;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
 flex:100%;
 float: left;
 display: flex;
-margin: 10px;
+margin: 0px;
 flex-wrap: wrap;
 flex-grow: inherit;
 padding: 10px;
