--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ margin-left: inherit;
 
 
 #container{
-    background-color: rgb(255, 255, 255);
+    background-color: "black";
     width: 100%;
     /*    border: 1px solid grey;*/
     margin: 10 auto;
